# GEAK

./: .dockerignore  .gitignore  DEMO_RUNBOOK.md  Dockerfile  INSTRUCTIONS.md  LICENSE.md  README.md  RUNTIME_ENV.md  RUNTIME_QUICKSTART.md  commandment_evaluator.py  entrypoint.sh  fix_and_install.sh  install_with_python312.sh  pyproject.toml  quick_install.sh  run_test_select_best.py  setup.py
21_elementwise/: elementwise_example.cpp  elementwise_example_add_4d.cpp  elementwise_example_transpose.cpp  elementwise_example_unary.cpp
68_gemm_add/: FINAL_OPTIMIZATION_SUMMARY.md  build_and_test.sh  final_test.sh  gemm_add_xdl_fp16_opt.cpp  gemm_add_xdl_fp16_v2.cpp  gemm_add_xdl_fp16_v3.cpp  gemm_add_xdl_fp16_v4.cpp  quick_test.sh  test_gemm_add.sh  test_harness.py
HingeLoss/: hingeloss.py  test_harness_translation.py
add_kernel/: OPTIMIZATION_REPORT.md  kernel.py  kernel_optimized.py  run_optimization.sh  test_harness.py  test_kernel.py
baseline_bandwidth/: block_histogram.txt  block_radix_rank.txt  block_run_length_decode.txt  device_binary_search.txt  device_merge_sort.txt  device_nth_element.txt  device_partial_sort.txt  device_radix_sort.txt  device_segmented_reduce.txt  warp_reduce.txt
docs/: BRANCH_COMPARISON_REPORT.md  DISCOVERY_PIPELINE.md  INTEGRATION_SUMMARY.md  MERGE_STRATEGY.md  METRIX_TOOL.md  MSA_vs_GEAK_V3_COMPARISON_AND_INTEGRATION.md  RUNTIME_ENV.md  architecture.md  (+7 more)
mcp_tools/openevolve-mcp/: pyproject.toml  run_mcp_server.sh
mcp_tools/openevolve-mcp/src/openevolve_mcp/: __init__.py  server.py
mcp_tools/openevolve-mcp/tests/: test_openevolve.py
(+886 files in other folders)
